fix(component): fix base alignment of the tag component
affects: ak-tag

--- a/packages/ak-tag/src/shadow.less
+++ b/packages/ak-tag/src/shadow.less
@@ -90,11 +90,10 @@ ak-tag {
   color: @ak-color-N700;
   font-size: @font-size;
   font-weight: normal;
-  line-height: 1;
+  line-height: @max-height;
   margin-left: @distance;
   margin-right: @distance;
-  align-self: flex-start;
-  height: 100%;
+  display:inline-block;
 
   // text truncation
   max-width: @max-text-width;
@@ -120,13 +119,12 @@ ak-tag {
   padding: 0;
   margin: 0;
   border-radius: @border-radius;
-  align-self: flex-end;
+  width: @button-width;
+  color: @ak-color-N500;
+  height: @max-height;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  width: @button-width;
-  color: @ak-color-N500;
 
   &:hover {
     color: @ak-color-R500;
